[tool.poetry]
name = "spotify-downloader-gui"
version = "0.1.0"
description = "A Spotify downloader with graphical user interface"
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spotify_downloader_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.2.4"
black = "^22.12.0"
spotdl = "^4.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
