[tool.poetry]
name = "spotify-downloader-gui"
version = "0.1.0"
description = "A simple Spotify Album Downloader"
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flet = "^0.23.2"
spotdl = "^4.2.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
